languages/montiarc-fe/src/test/resources/arc4/coco/valid/StringSender.arc
package valid;

component StringSender {
  port out String sOut;
}