languages/montiarc-fe/src/test/resources/arc4/coco/invalid/TopLevelComponentHasInstanceName.arc
package invalid;

component TopLevelComponentHasInstanceName instance {
}